2007-09-18  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: removed intermediate _xcall, use direct call of _call
	as thread function;

	* xmt.h, xmt.cc: add locker for _rip_id---it may be changed from different
	threads in case of fast termination of thread;

	* libxmt: version 1.13.0

2007-09-05  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: looks like non-POD return from thread is unstable,
	and should be avoided; replace union rec_code by void * or long,
	depends upon operation environment;

	* ut/signal-1.cc, ut/signal-2.cc, ut/signal-3.cc: ditto;

	* ut/flck.cc, ut/mt_test.cc, ut/mt_test.h: ditto;

	* ut/lfs.cc, ut/mt_test_suite.cc: ditto;

	* libxmt: version 1.12.0

2007-08-27  Petr Ovtchenkov  <ptr@island.corbina.net>

	* shm.h: use namespace std for max.

2007-08-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* test/mt/Makefile: let's try don't include boost's -I if macro
	not defined---mysterious behaviour otherwise happens;

	* xmt.h: add typedefs shared_mutex, shared_recursive_mutex;
	
	* shm.h: change ipc_sharable on is_ipc_sharable, use TR1 type_traits
	technique; add tricks to compile without STLport;

	* ut: moved from ../../test/mt to ut.

2007-07-17  Petr Ovtchenkov  <ptr@island.corbina.net>

	* test/mt: boost unit test framework was replaced by exam.

2007-07-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* libxmt: version 1.11.0

2007-07-11  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, shm.h: Condition replaced by condition;

	* xmt.h, shm.h: Barrier replaced by barrier, Semaphore by semaphore.

2007-06-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc, uid.cc, thr_mgr.cc: replace Locker by scoped_lock.

	* shm.h, xmt.h, xmt.cc, thr_mgr.h, uid.cc, time.cc: all Mutex replaced by mutex;

	* xmt.h: mutexRS renamed to recursive_mutex; LockerRS renamed to
	recursive_scoped_lock; obsolete LockerSDS removed;

	* xmt.h: LockerRd renamed to rd_scoped_lock, LockerWr to wr_scoped_lock,